src/test/ui/parser/issue-87217-keyword-order/wrong-const.stderr
error: expected one of `extern` or `fn`, found keyword `const`
  --> $DIR/wrong-const.rs:9:8
   |
LL | unsafe const fn test() {}
   | -------^^^^^
   | |      |
   | |      expected one of `extern` or `fn`
   | help: `const` must come before `unsafe`: `const unsafe`
   |
   = note: keyword order for functions declaration is `<visibility>`, `const`, `async`, `unsafe`, `extern`, `"<ABI>"`

error: aborting due to previous error

